--- a/_config.yml
+++ b/_config.yml
@@ -3,31 +3,27 @@
 # This config file contains the config of your webpages
 # You may also want to update /config/webpack.pwa.js in case you want to generate a Progressive Web App
 
-title: Mobile App Landing Page Template
-email: contact@sandoche.com
-description: Free to use static landing page template to showcase your mobile app
+title: iColors - 你的专属色彩助手
+email: icolors2023@163.com
+description: 热门风格配色灵感，色彩测试，自制色卡
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mobileapplandingpage.learn.uno" # the base hostname & protocol for your site, e.g. http://example.com
 theme_color: '#efeeff'
-twitter_username: sandochee
-github_username:  sandoche
-author: Sandoche Adittane
+twitter_username: iColors2023
+github_username:  iColors2023
+author: Xuyi Tang
 logo: assets/images/large-logo.png
 twitter:
-  username: sandochee
+  username: iColors2023
 social:
-  name: Sandoche Adittane
+  name: iColors2023
   links:
-    - https://twitter.com/sandochee
-    - https://www.facebook.com/sandoche
-    - https://www.linkedin.com/in/sandoche
-    - https://plus.google.com/+SandocheADITTANE
-    - https://github.com/sandoche
+    - https://github.com/iColors2023
 
 languages: ["en"]
 ampdir: amp
 
-github: https://github.com/sandoche/Mobile-app-landingpage-template
+github: https://github.com/RickeyBoy/iColor-Landing-Page
 
 ### Google webmaster tools, Google Analytics, Doorbell and Cookie consent uncomment and put the API key
 #webmaster_verifications:
