--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,16 +1,13 @@
 app:
-  screenshots: Screenshots
-  description: Description
-  featured: Featured in
+  screenshots: 功能展示
+  description: 主要功能一览
 
 footer:
-  copyright: Made with ❤️ in Europe 🇪🇺 by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
+  copyright: Made By Xuyi Tang
   links:
-    - title: Github
-      url: https://github.com/sandoche/Mobile-app-landingpage-template
-      target: _blank
-    - title: Donate
-      url: https://paypal.me/kanbanote
-      target: _blank
     - title: Privacy
       url: /privacy
+      target: _blank
+    - title: Contact us
+      url: /contactus
+      target: _blank
