--- a/_data/app.yml
+++ b/_data/app.yml
@@ -1,30 +1,30 @@
 name: iColors - 你的专属色彩助手
 description: 热门风格配色灵感，色彩测试，自制色卡
-full_description: 'iColors为设计师和热爱色彩的每一个你打造。主要功能一览：
+full_description: 'iColors为设计师和热爱色彩的每一个你打造。<br>
 
-【基础色系】在红/蓝/黄/绿等色系下，提供500+基础单色。当你想要找到"一种浅一点、不刺眼的红色"但又不知道具体色值时，看看这里来找下灵感吧
+<br>-【基础色系】在红/蓝/黄/绿等色系下，提供500+基础单色。当你想要找到"一种浅一点、不刺眼的红色"但又不知道具体色值时，看看这里来找下灵感吧
 
-【编辑推荐】iColors小编捕捉到时下热门的主题配色，并通过每个主题10+组配色的形式进行展现，有多种排版方式任你选择。现有主题包含莫兰迪、马卡龙、美式复古、中国传统色等，后续将持续更新，为你带来新鲜灵感。当你想了解"莫兰迪色系到底有什么特征"时，欢迎逛逛这里。如果您有想要了解的色彩主题，欢迎评论或联系我们，等待惊喜~
+<br>-【编辑推荐】iColors小编捕捉到时下热门的主题配色，并通过每个主题10+组配色的形式进行展现，有多种排版方式任你选择。现有主题包含莫兰迪、马卡龙、美式复古、中国传统色等，后续将持续更新，为你带来新鲜灵感。当你想了解"莫兰迪色系到底有什么特征"时，欢迎逛逛这里。如果您有想要了解的色彩主题，欢迎评论或联系我们，等待惊喜~
 
-【配色全集】2000+配色组合，为你提供源源不断的灵感，满足不同风格需求
+<br>-【配色全集】2000+配色组合，为你提供源源不断的灵感，满足不同风格需求
 
-【色彩测试】火爆日韩的四季型人色彩测试，通过肤色、发色、瞳色等确定你的季节类型（春/夏/秋/冬），并依此推荐穿搭和美妆色系，帮你找到最能凸显魅力的个人专属色。简易版一键测试，方便快捷；完整版题目更丰富，结果更准确，还可解锁专属配色推荐
+<br>-【色彩测试】火爆日韩的四季型人色彩测试，通过肤色、发色、瞳色等确定你的季节类型（春/夏/秋/冬），并依此推荐穿搭和美妆色系，帮你找到最能凸显魅力的个人专属色。简易版一键测试，方便快捷；完整版题目更丰富，结果更准确，还可解锁专属配色推荐
 
-【自制色卡】一键捕捉照片配色，支持拍照或相册上传，可通过移动放大镜选取自己满意的色块，并自定义命名。动手来记录生活的色彩吧！
+<br>-【自制色卡】一键捕捉照片配色，支持拍照或相册上传，可通过移动放大镜选取自己满意的色块，并自定义命名。动手来记录生活的色彩吧！
 
-【色彩搜索】支持HEX值、色彩名、关键词搜索，在有明确需求的场景下，帮你精准找到想要的单色/配色
+<br>-【色彩搜索】支持HEX值、色彩名、关键词搜索，在有明确需求的场景下，帮你精准找到想要的单色/配色
 
-【今日色彩】色彩版日历，为每一天赋予专属色彩。想看看今天是什么颜色的吗？
+<br>-【今日色彩】色彩版日历，为每一天赋予专属色彩。想看看今天是什么颜色的吗？
 
-【配色灵感】左右滑动解锁每日10组专属的配色灵感，高级版不限组数哦~
+<br>-【配色灵感】左右滑动解锁每日10组专属的配色灵感，高级版不限组数哦~
 
-【收藏/分享/下载】所有单色/配色均支持收藏/分享/下载，来创建你自己的灵感库，并与好友分享吧！
+<br>-【收藏/分享/下载】所有单色/配色均支持收藏/分享/下载，来创建你自己的灵感库，并与好友分享吧！
 
-【后续功能】iColors后续预计新增小组件、自制色卡可多选色彩个数、更强大的搜索功能、数据云端同步等。欢迎体验，并通过评论或联系我们来写下你的愿望功能！
+<br>-【后续功能】iColors后续预计新增小组件、自制色卡可多选色彩个数、更强大的搜索功能、数据云端同步等。欢迎体验，并通过评论或联系我们来写下你的愿望功能！
 '
-android: https://telegra.ph/Replace-this-link-07-23
+
 iOS: https://apps.apple.com/app/id6448422065
-web: https://telegra.ph/Replace-this-link-07-23
+
 screenshots:
   - Apple iPhone 8 Plus Screenshot 1.png
   - Apple iPhone 8 Plus Screenshot 2.png
@@ -32,9 +32,4 @@ screenshots:
   - Apple iPhone 8 Plus Screenshot 4.png
   - Apple iPhone 8 Plus Screenshot 5.png
   - Apple iPhone 8 Plus Screenshot 6.png
-producthunt: https://telegra.ph/Replace-this-link-07-23
-companies:
-  - url: https://telegra.ph/Replace-this-link-07-23
-    image: androidpolice.png
-  - url: https://telegra.ph/Replace-this-link-07-23
-    image: producthunt.png
+
