--- a/_data/app.yml
+++ b/_data/app.yml
@@ -1,6 +1,6 @@
 name: iColors - 你的专属色彩助手
-description: 热门风格配色灵感，色彩测试，自制色卡
-full_description: 'iColors为设计师和热爱色彩的每一个你打造。<br>
+description: 热门风格配色灵感/色彩测试/自制色卡
+full_description: 'iColors为热爱色彩的每一个你打造。<br>
 
 <br>【基础色系】在红/蓝/黄/绿等色系下，提供500+基础单色。当你想要找到"一种浅一点、不刺眼的红色"但又不知道具体色值时，看看这里来找下灵感吧
 <br>
