--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -8,6 +8,9 @@ footer:
     - title: Privacy
       url: /privacy
       target: _blank
+    - title: EULA
+      url: /EULA
+      target: _blank
     - title: Contact us
       url: /contactus
       target: _blank
